// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Infinate default class on loading=false 1`] = `
<div
  className="table_row"
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
</div>
`;

exports[`Infinate loading class on loading=true 1`] = `
<div
  className="table_row loading_block  loading_block__h40"
>
  <span
    style={
      Object {
        "fontSize": 0,
      }
    }
  />
</div>
`;
